made top-logo less wide when smaller (not visually, just cropped the tranparent whitespace). This will mainly prevent unwanted user interaction on the mobile display (eg. user tapping on logo's whitespace when intending to tap on the sidebar button)

--- a/less/base_centerpanel.less
+++ b/less/base_centerpanel.less
@@ -39,16 +39,20 @@
 
 @media screen and (max-height: 525px) {
   .d3dlogo {
-    max-width: 399px;
     top: 20%;
     height: 57px;
-    background-image: url('../img/logo/logo_smaller_wide.png');
+    max-width: 307px;
+    background-image: url('../img/logo/logo_smaller.png');
+//    max-width: 399px;
+//    background-image: url('../img/logo/logo_smaller_wide.png');
   }
 }
 @media screen and (max-height: 375px) {
   .d3dlogo {
-    max-width: 399px;
     height: 40px;
-    background-image: url('../img/logo/logo_smallest_wide.png');
+    max-width: 216px;
+    background-image: url('../img/logo/logo_smallest.png');
+//    max-width: 399px;
+//    background-image: url('../img/logo/logo_smallest_wide.png');
   }
 }
