--- a/less/mobile.less
+++ b/less/mobile.less
@@ -12,9 +12,11 @@
 }
 .d3dlogo {
   top: 0;
-  max-width: 399px;
   height: 40px;
-  background-image: url('../img/logo/logo_smallest_wide.png');
+  max-width: 216px;
+  background-image: url('../img/logo/logo_smallest.png');
+//    max-width: 399px;
+//    background-image: url('../img/logo/logo_smallest_wide.png');
 }
 .doodlecontainer {
 /*	position: absolute;*/
